Bug 50026 - [4.7 Regression] Revision 177575 caused many test failures
Summary: [4.7 Regression] Revision 177575 caused many test failures
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: rtl-optimization (show other bugs)
Version: 4.7.0
: P3 normal
Target Milestone: 4.7.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-09 02:34 UTC by H.J. Lu
Modified: 2011-08-10 09:17 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2011-08-09 02:34:47 UTC
On Linux/x86, revision 177575:

http://gcc.gnu.org/ml/gcc-cvs/2011-08/msg00588.html

caused:

http://gcc.gnu.org/ml/gcc-testresults/2011-08/msg00961.html

FAIL: PR3096 -O3 -findirect-dispatch execution - source compiled test
FAIL: PR3096 -O3 execution - source compiled test
FAIL: PR3096 -findirect-dispatch execution - source compiled test
FAIL: PR3096 execution - source compiled test
FAIL: gcc.target/i386/sse2-set-v8hi-1a.c execution test
FAIL: gcc.target/i386/sse2-set-v8hi-2a.c execution test
FAIL: gcc.target/i386/sse4_1-set-v16qi-1a.c execution test
FAIL: gcc.target/i386/sse4_1-set-v16qi-2a.c execution test
FAIL: gcc.target/i386/sse4_1-set-v16qi-3a.c execution test
FAIL: md5test -O3 -findirect-dispatch execution - source compiled test
FAIL: md5test -O3 execution - source compiled test
FAIL: md5test -findirect-dispatch execution - source compiled test
FAIL: md5test execution - source compiled test
FAIL: pr21785 -O3 -findirect-dispatch execution - source compiled test
FAIL: pr21785 -O3 execution - source compiled test
FAIL: pr21785 -findirect-dispatch execution - source compiled test
FAIL: pr21785 execution - source compiled test
FAIL: shatest -O3 -findirect-dispatch execution - source compiled test
FAIL: shatest -O3 execution - source compiled test
FAIL: shatest -findirect-dispatch execution - source compiled test
FAIL: shatest execution - source compiled test

and

http://gcc.gnu.org/ml/gcc-testresults/2011-08/msg00960.html

FAIL: PR3096 -O3 -findirect-dispatch execution - source compiled test
FAIL: PR3096 -O3 execution - source compiled test
FAIL: PR3096 -findirect-dispatch execution - source compiled test
FAIL: PR3096 execution - source compiled test
FAIL: c-c++-common/dfp/inf-1.c execution test
FAIL: c-c++-common/dfp/inf-1.c execution test
FAIL: c-c++-common/dfp/operator-assignment.c execution test
FAIL: c-c++-common/dfp/operator-assignment.c execution test
FAIL: c-c++-common/dfp/usual-arith-conv.c execution test
FAIL: c-c++-common/dfp/usual-arith-conv.c execution test
FAIL: gcc.dg/compat/union-m128-1 c_compat_x_tst.o-c_compat_y_tst.o execute
FAIL: gcc.dg/pr43419.c execution test
FAIL: gcc.dg/torture/fp-int-convert-float128-timode.c  -O0  execution test
FAIL: gcc.dg/torture/fp-int-convert-float128-timode.c  -O1  execution test
FAIL: gcc.dg/torture/fp-int-convert-float128-timode.c  -O2  execution test
FAIL: gcc.dg/torture/fp-int-convert-float128-timode.c  -O2 -flto  execution test
FAIL: gcc.dg/torture/fp-int-convert-float128-timode.c  -O2 -flto -flto-partition=none  execution test
FAIL: gcc.dg/torture/fp-int-convert-float128-timode.c  -O3 -fomit-frame-pointer  execution test
FAIL: gcc.dg/torture/fp-int-convert-float128-timode.c  -O3 -g  execution test
FAIL: gcc.dg/torture/fp-int-convert-float128-timode.c  -Os  execution test
FAIL: gcc.dg/torture/fp-int-convert-float128.c  -O0  execution test
FAIL: gcc.dg/torture/fp-int-convert-float128.c  -O1  execution test
FAIL: gcc.dg/torture/fp-int-convert-float128.c  -O2  execution test
FAIL: gcc.dg/torture/fp-int-convert-float128.c  -O2 -flto  execution test
FAIL: gcc.dg/torture/fp-int-convert-float128.c  -O2 -flto -flto-partition=none  execution test
FAIL: gcc.dg/torture/fp-int-convert-float128.c  -O3 -fomit-frame-pointer  execution test
FAIL: gcc.dg/torture/fp-int-convert-float128.c  -O3 -g  execution test
FAIL: gcc.dg/torture/fp-int-convert-float128.c  -Os  execution test
FAIL: gcc.target/i386/float128-2.c execution test
FAIL: gcc.target/i386/pr32268.c execution test
FAIL: gcc.target/i386/sse-addss-1.c execution test
FAIL: gcc.target/i386/sse-andnps-1.c execution test
FAIL: gcc.target/i386/sse-andps-1.c execution test
FAIL: gcc.target/i386/sse-cvtsi2ss-1.c execution test
FAIL: gcc.target/i386/sse-cvtsi2ss-2.c execution test
FAIL: gcc.target/i386/sse-divps-1.c execution test
FAIL: gcc.target/i386/sse-divss-1.c execution test
FAIL: gcc.target/i386/sse-maxss-1.c execution test
FAIL: gcc.target/i386/sse-minss-1.c execution test
FAIL: gcc.target/i386/sse-movaps-1.c execution test
FAIL: gcc.target/i386/sse-movhlps-1.c execution test
FAIL: gcc.target/i386/sse-movhps-1.c execution test
FAIL: gcc.target/i386/sse-movlhps-1.c execution test
FAIL: gcc.target/i386/sse-movss-3.c execution test
FAIL: gcc.target/i386/sse-movups-1.c execution test
FAIL: gcc.target/i386/sse-mulps-1.c execution test
FAIL: gcc.target/i386/sse-mulss-1.c execution test
FAIL: gcc.target/i386/sse-subps-1.c execution test
FAIL: gcc.target/i386/sse-subss-1.c execution test
FAIL: gcc.target/i386/sse-unpckhps-1.c execution test
FAIL: gcc.target/i386/sse-unpcklps-1.c execution test
FAIL: gcc.target/i386/sse2-addpd-1.c execution test
FAIL: gcc.target/i386/sse2-addsd-1.c execution test
FAIL: gcc.target/i386/sse2-andnpd-1.c execution test
FAIL: gcc.target/i386/sse2-andpd-1.c execution test
FAIL: gcc.target/i386/sse2-cvtdq2pd-1.c execution test
FAIL: gcc.target/i386/sse2-cvtdq2ps-1.c execution test
FAIL: gcc.target/i386/sse2-cvtps2dq-1.c execution test
FAIL: gcc.target/i386/sse2-cvtps2pd-1.c execution test
FAIL: gcc.target/i386/sse2-cvtsd2ss-1.c execution test
FAIL: gcc.target/i386/sse2-cvtsi2sd-1.c execution test
FAIL: gcc.target/i386/sse2-cvtsi2sd-2.c execution test
FAIL: gcc.target/i386/sse2-cvtss2sd-1.c execution test
FAIL: gcc.target/i386/sse2-cvttps2dq-1.c execution test
FAIL: gcc.target/i386/sse2-divpd-1.c execution test
FAIL: gcc.target/i386/sse2-divsd-1.c execution test
FAIL: gcc.target/i386/sse2-maxpd-1.c execution test
FAIL: gcc.target/i386/sse2-maxsd-1.c execution test
FAIL: gcc.target/i386/sse2-minpd-1.c execution test
FAIL: gcc.target/i386/sse2-minsd-1.c execution test
FAIL: gcc.target/i386/sse2-movapd-1.c execution test
FAIL: gcc.target/i386/sse2-movdqa-1.c execution test
FAIL: gcc.target/i386/sse2-movdqu-1.c execution test
FAIL: gcc.target/i386/sse2-movhpd-1.c execution test
FAIL: gcc.target/i386/sse2-movlpd-1.c execution test
FAIL: gcc.target/i386/sse2-movupd-1.c execution test
FAIL: gcc.target/i386/sse2-mulpd-1.c execution test
FAIL: gcc.target/i386/sse2-mulsd-1.c execution test
FAIL: gcc.target/i386/sse2-orpd-1.c execution test
FAIL: gcc.target/i386/sse2-paddq-1.c execution test
FAIL: gcc.target/i386/sse2-pmuludq-1.c execution test
FAIL: gcc.target/i386/sse2-pshufd-1.c execution test
FAIL: gcc.target/i386/sse2-psllq-1.c execution test
FAIL: gcc.target/i386/sse2-psrlq-1.c execution test
FAIL: gcc.target/i386/sse2-psubq-1.c execution test
FAIL: gcc.target/i386/sse2-punpckhdq-1.c execution test
FAIL: gcc.target/i386/sse2-punpckhqdq-1.c execution test
FAIL: gcc.target/i386/sse2-punpckhwd-1.c execution test
FAIL: gcc.target/i386/sse2-punpckldq-1.c execution test
FAIL: gcc.target/i386/sse2-punpcklqdq-1.c execution test
FAIL: gcc.target/i386/sse2-punpcklwd-1.c execution test
FAIL: gcc.target/i386/sse2-set-v16qi-1.c execution test
FAIL: gcc.target/i386/sse2-set-v16qi-2.c execution test
FAIL: gcc.target/i386/sse2-set-v16qi-3.c execution test
FAIL: gcc.target/i386/sse2-set-v8hi-1.c execution test
FAIL: gcc.target/i386/sse2-set-v8hi-1a.c execution test
FAIL: gcc.target/i386/sse2-set-v8hi-2.c execution test
FAIL: gcc.target/i386/sse2-set-v8hi-2a.c execution test
FAIL: gcc.target/i386/sse2-shufpd-1.c execution test
FAIL: gcc.target/i386/sse2-shufps-1.c execution test
FAIL: gcc.target/i386/sse2-sqrtpd-1.c execution test
FAIL: gcc.target/i386/sse2-subpd-1.c execution test
FAIL: gcc.target/i386/sse2-subsd-1.c execution test
FAIL: gcc.target/i386/sse2-unpckhpd-1.c execution test
FAIL: gcc.target/i386/sse2-unpcklpd-1.c execution test
FAIL: gcc.target/i386/sse2-xorpd-1.c execution test
FAIL: gcc.target/i386/sse4_1-set-v16qi-1.c execution test
FAIL: gcc.target/i386/sse4_1-set-v16qi-1a.c execution test
FAIL: gcc.target/i386/sse4_1-set-v16qi-2.c execution test
FAIL: gcc.target/i386/sse4_1-set-v16qi-2a.c execution test
FAIL: gcc.target/i386/sse4_1-set-v16qi-3.c execution test
FAIL: gcc.target/i386/sse4_1-set-v16qi-3a.c execution test
FAIL: gfortran.dg/array_constructor_4.f90  -O3 -fomit-frame-pointer  execution test
FAIL: gfortran.dg/array_constructor_4.f90  -O3 -fomit-frame-pointer -funroll-all-loops -finline-functions  execution test
FAIL: gfortran.dg/array_constructor_4.f90  -O3 -fomit-frame-pointer -funroll-loops  execution test
FAIL: gfortran.dg/array_constructor_4.f90  -O3 -g  execution test
FAIL: gfortran.dg/array_constructor_5.f90  -O3 -fomit-frame-pointer  execution test
FAIL: gfortran.dg/array_constructor_5.f90  -O3 -fomit-frame-pointer -funroll-all-loops -finline-functions  execution test
FAIL: gfortran.dg/array_constructor_5.f90  -O3 -fomit-frame-pointer -funroll-loops  execution test
FAIL: gfortran.dg/array_constructor_5.f90  -O3 -g  execution test
FAIL: gfortran.fortran-torture/execute/nestcons.f90 execution,  -O3 -g
FAIL: md5test -O3 -findirect-dispatch execution - source compiled test
FAIL: md5test -O3 execution - source compiled test
FAIL: md5test -findirect-dispatch execution - source compiled test
FAIL: md5test execution - source compiled test
FAIL: pr21785 -O3 -findirect-dispatch execution - source compiled test
FAIL: pr21785 -O3 execution - source compiled test
FAIL: pr21785 -findirect-dispatch execution - source compiled test
FAIL: pr21785 execution - source compiled test
FAIL: shatest -O3 -findirect-dispatch execution - source compiled test
FAIL: shatest -O3 execution - source compiled test
FAIL: shatest -findirect-dispatch execution - source compiled test
FAIL: shatest execution - source compiled test

with
Comment 1 Vladimir Makarov 2011-08-09 14:35:27 UTC
Author: vmakarov
Date: Tue Aug  9 14:35:21 2011
New Revision: 177599

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=177599
Log:
2011-08-09  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/50026
	Revert:
	PR rtl-optimization/49990
	* ira-costs.c (print_allocno_costs, print_pseudo_costs): Don't
	ignore classes which can not change mode.
	(find_costs_and_classes): Ditto.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/ira-costs.c
Comment 2 Richard Biener 2011-08-10 09:17:11 UTC
Fixed.