2011-08-09  Vladimir Makarov  <vmakarov@redhat.com>

PR target/50026
	Revert:
	PR rtl-optimization/49990
	* ira-costs.c (print_allocno_costs, print_pseudo_costs): Don't
	ignore classes which can not change mode.
	(find_costs_and_classes): Ditto.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@177599 138bc75d-0d04-0410-961f-82ee72b054a4